syntax = "proto3";

package message;

import "message/c2c.proto";
import "message/routing.proto";
import "message/component.proto";
import "system/nt_sys_event.proto";

message ContentHead {
  uint32 Type = 1;
  optional uint32 SubType = 2;
  optional uint32 C2CCmd = 3;
  optional uint32 Random = 4;
  optional uint32 Sequence = 5;
  optional uint32 TimeStamp = 6;
  optional uint64 PkgNum = 7;
  optional uint32 PkgIndex = 8;
  optional uint32 DivSeq = 9;
  uint32 AutoReply = 10;
  optional uint32 NTMsgSeq = 11;
  optional uint64 MsgUid = 12;
  optional ForwardHead Forward = 15;
}

message MessageBody {
  optional RichText RichText = 1;
  optional bytes MsgContent = 2;
  optional bytes MsgEncryptContent = 3;
}

message GroupRecallMsg {
  uint32 Type = 1;
  uint32 GroupUin = 2;
  GroupRecallMsgField3 Field3 = 3;
  GroupRecallMsgField4 Field4 = 4;
}

message GroupRecallMsgField3 {
  uint32 Sequence = 1;
  uint32 Random = 2;
  uint32 Field3 = 3;
}

message GroupRecallMsgField4 {
  uint32 Field1 = 1;
}

message Message {
  optional RoutingHead RoutingHead = 1;
  optional ContentHead ContentHead = 2;
  optional MessageBody Body = 3;
  optional uint32 ClientSequence = 4;
  optional uint32 Random = 5;
  optional bytes SyncCookie = 6;
  // optional AppShareInfo AppShare = 7;
  optional uint32 Via = 8;
  optional uint32 DataStatist = 9;
  // optional MultiMsgAssist MultiMsgAssist = 10;
  // optional InputNotifyInfo InputNotifyInfo = 11;
  optional MessageControl Ctrl = 12;
  // optional ReceiptReq ReceiptReq = 13;
  uint32 MultiSendSeq = 14;
}

message MessageControl {
  int32 MsgFlag = 1;
}

message PushMsg {
  PushMsgBody Message = 1;
  optional int32 Status = 3;
  optional system.NTSysEvent NtEvent = 4;
  optional int32 PingFLag = 5;
  optional int32 GeneralFlag = 9;
}

message PushMsgBody {
  ResponseHead ResponseHead = 1;
  ContentHead ContentHead = 2;
  optional MessageBody Body = 3;
}

message ResponseHead {
  uint32 FromUin = 1;
  optional string FromUid = 2;
  uint32 Type = 3;
  uint32 SigMap = 4;  // 鬼知道是啥
  uint32 ToUin = 5;
  optional string ToUid = 6;
  optional ResponseForward Forward = 7;
  optional ResponseGrp Grp = 8;
}

message RoutingHead {
  optional C2C C2C = 1;
  optional Grp Grp = 2;
  optional GrpTmp GrpTmp = 3;
  optional WPATmp WpaTmp = 6;
  optional Trans0X211 Trans0X211 = 15;
}

message SsoReaddedReport {
  optional SsoReaddedReportGroup Group = 1;
  optional SsoReaddedReportC2C C2C = 2;
}

message SsoReaddedReportC2C {
  optional string TargetUid = 2;
  uint32 Time = 3;
  uint32 StartSequence = 4;
}

message SsoReaddedReportGroup {
  uint32 GroupUin = 1;
  uint32 StartSequence = 2;
}
